--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -7,7 +7,6 @@
 
     <Button
         android:id="@+id/groupNumber"
-        android:background="#00aaa1"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
@@ -17,6 +16,10 @@
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="#ffffff"
-        android:textSize="17dp"/>
-
+        android:textSize="17dp"
+        android:background="@drawable/buttonshape"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"/>
 </LinearLayout>
