--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -1,36 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/studentName"
-        android:layout_width="300dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="25dp"
+        android:textColor="#ffffff"
         android:padding="17dp"
         android:text="TextView"
         android:textSize="17dp"/>
 
     <TextView
         android:id="@+id/facNum"
-        android:layout_width="300dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:textColor="#ffffff"
+        android:layout_marginHorizontal="205dp"
         android:padding="17dp"
         android:text="TextView"
-        android:textSize="17dp"/>
+        android:textSize="17dp" />
 
     <EditText
         android:id="@+id/studentMark"
-        android:layout_width="300dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
         android:padding="17dp"
         android:textSize="17dp"
+        android:textColor="#ffffff"
         android:inputType="numberDecimal"
-        android:hint="Mark"/>
+        android:layout_marginTop="85dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginBottom="45dp"
+        android:hint="Mark" />
 
 
 
-</LinearLayout>
+
+
+</RelativeLayout>
+
