--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="University Identification Number"/>
+                android:hint="Идентификационен номер"/>
         </android.support.design.widget.TextInputLayout>
 
 
@@ -43,7 +43,7 @@
             android:layout_marginTop="35dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="Login"
+            android:text="Вход"
             android:textColor="#ffffff"/>
 
     </LinearLayout>
