--- a/app/src/main/res/layout/activity_students.xml
+++ b/app/src/main/res/layout/activity_students.xml
@@ -1,7 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/subjects_bg">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_students"
@@ -18,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/recycler_view_students"
         android:id="@+id/saveBtn"
-        android:text="Submit"
+        android:text="Запиши"
         android:layout_marginTop="45dp"
         android:layout_marginBottom="25dp"
         android:layout_margin="45dp"
@@ -26,7 +25,7 @@
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="17dp"
-        android:background="@drawable/buttonshape"
+        android:background="@drawable/buttoncolored"
         android:shadowColor="#A8A8A8"
         android:shadowDx="0"
         android:shadowDy="0"
