--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -3,14 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@drawable/customborder">
 
     <TextView
         android:id="@+id/studentName"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:padding="17dp"
         android:text="TextView"
         android:textSize="17dp"/>
@@ -20,7 +21,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:layout_marginHorizontal="205dp"
         android:padding="17dp"
         android:text="TextView"
@@ -32,16 +33,12 @@
         android:layout_height="wrap_content"
         android:padding="17dp"
         android:textSize="17dp"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:inputType="numberDecimal"
         android:layout_marginTop="85dp"
         android:layout_marginLeft="12dp"
         android:layout_marginBottom="45dp"
-        android:hint="Mark" />
-
-
-
-
+        android:hint="Оценка" />
 
 </RelativeLayout>
 
