--- a/app/src/main/res/layout/activity_subject.xml
+++ b/app/src/main/res/layout/activity_subject.xml
@@ -1,10 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/subjects_bg">
+    android:background="@drawable/bg">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_groups"
+        android:id="@+id/recycler_view_subjects"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
