--- a/app/src/main/res/layout/activity_labs.xml
+++ b/app/src/main/res/layout/activity_labs.xml
@@ -14,72 +14,72 @@
         android:paddingRight="24dp">
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/addMarkBtn"
+            android:id="@+id/lab01Btn"
             android:background="@drawable/buttonshape"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:padding="12dp"
-            android:text="Нанеси оценка"
+            android:text="Упражнение 1"
             android:textColor="#ffffff" />
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/addEndorsementBtn"
+            android:id="@+id/lab02Btn"
             android:background="@drawable/buttonshape"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:padding="12dp"
-            android:text="Завери"
+            android:text="Упражнение 2"
             android:textColor="#ffffff" />
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/addAttendanceBtn"
+            android:id="@+id/lab03Btn"
             android:background="@drawable/buttonshape"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:padding="12dp"
-            android:text="Нанеси присъствия"
+            android:text="Упражнение 3"
             android:textColor="#ffffff" />
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/editMarkBtn"
+            android:id="@+id/lab04Btn"
             android:background="@drawable/buttonshape"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:padding="12dp"
-            android:text="Промени оценка"
+            android:text="Упражнение 4"
             android:textColor="#ffffff" />
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/viewStudentsBtn"
+            android:id="@+id/lab05Btn"
             android:background="@drawable/buttonshape"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:padding="12dp"
-            android:text="Покажи всички студенти"
+            android:text="Упражнение 5"
             android:textColor="#ffffff"/>
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/viewScholarsBtn"
+            android:id="@+id/lab06Btn"
             android:background="@drawable/buttonshape"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:padding="12dp"
-            android:text="Покажи всички стипендианти"
+            android:text="Упражнение 6"
             android:textColor="#ffffff"/>
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/logoutBtn"
+            android:id="@+id/lab07Btn"
             android:background="@drawable/buttonshape"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:padding="12dp"
-            android:text="Изход"
+            android:text="Упражнение 7"
             android:textColor="#ffffff"/>
 
     </LinearLayout>
