--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -13,22 +13,39 @@
         android:scrollbars="vertical" />
 
     <Button
+        android:id="@+id/saveBtn"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/recycler_view_students"
-        android:id="@+id/saveBtn"
-        android:text="Запиши"
-        android:layout_marginTop="45dp"
-        android:layout_marginBottom="25dp"
-        android:layout_margin="45dp"
-        android:padding="17dp"
-        android:textAlignment="center"
-        android:textColor="#ffffff"
-        android:textSize="17dp"
+        android:layout_below="@+id/recycler_view_students"
+        android:layout_marginLeft="37dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/buttoncolored"
+        android:padding="17dp"
         android:shadowColor="#A8A8A8"
         android:shadowDx="0"
         android:shadowDy="0"
-        android:shadowRadius="5"/>
+        android:shadowRadius="5"
+        android:text="Запиши"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="17dp" />
+
+    <Button
+        android:id="@+id/homeBtn"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/saveBtn"
+        android:layout_marginLeft="37dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/buttoncolored"
+        android:padding="17dp"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="Начало"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="17dp" />
 
 </RelativeLayout>
