--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,10 +41,23 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
-            android:layout_marginBottom="24dp"
             android:padding="12dp"
             android:text="Вход"
             android:textColor="#ffffff"/>
 
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/GDPRBtn"
+            android:background="#ffffff"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:padding="12dp"
+            android:text="Информация за лични данни"
+            android:textColor="#00aaa1"/>
+
     </LinearLayout>
+
+
+
+
 </ScrollView>
